modificacion html y css
cambios en ASIDE, falta centrar y formatear el "article-works" y el resto del portfolio

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <h3>Trabajos</h3>
         <section id="aside-section">
             <article class="aside-article">
-                <a class="banner" target="_blank" href="https://camalote.empretienda.com.ar/"><img  src="imagenes/100-camalote tienda.png" alt="Camalote tienda"></a>
+                <div class="banner">
+                    <a  target="_blank" href="https://camalote.empretienda.com.ar/"><img  src="imagenes/100-camalote tienda.png" alt="Camalote tienda"></a>
+                </div>
                 <h4>Cuadernos Camalote</h4>
                 <p>En base a la tienda del emprendimiento genere una estructura HTML listo para 
                    generar una tienda de productos, donde podemos encontrar diferentes secciones 
@@ -48,7 +50,9 @@
                 </div>
             </article>
             <article class="aside-article">
-                <a class="banner" target="_blank" href="https://ourbmx.com/"><img  src="imagenes/101-our bmx blog.png" alt="Our Bmx"></a>
+                <div class="banner">
+                    <a  target="_blank" href="https://ourbmx.com/"><img  src="imagenes/101-our bmx blog.png" alt="Our Bmx"></a>
+                </div>
                 <h4>Our Bmx</h4>
                 <p>Guiandome en el formato de la pagina cree un HTML generico para armar un blog
                    de difusion de videos, con espacios para anuncios y patrocinadores. Tambien 
@@ -64,41 +68,42 @@
                 </div>
             </article>
         </section>
+        <article id="article-works">
+            <div>
+                <h3 id="works-title">He trabajado con</h3>
+                <ul id="works-img">
+                    <li id="coderhouse"><a href="https://www.linkedin.com/"><img src="imagenes/016-coderhouse.png" alt="Coderhouse"></a>
+                    <li id="linkedin"><a href="https://www.linkedin.com/"><img src="imagenes/017-utn.png" alt="UTN"></a>
+                </ul>
+            </div>
+        </article>
     </aside>
-    <article id="article-works">
-        <div id="works">
-            <h3 id="works-title">He trabajado con</h3>
-            <ul id="works-img">
-                <li id="coderhouse"><a href="https://www.linkedin.com/"><img src="imagenes/016-coderhouse.png" alt="Coderhouse"></a>
-                <li id="linkedin"><a href="https://www.linkedin.com/"><img src="imagenes/017-utn.png" alt="UTN"></a>
-            </ul>
-        </div>
-    </article>
-    <section>
-        <h2>Conocimientos</h2>
-        <ul>
-            <li><img src="imagenes/001-unity.png" alt="Unity">Unity</li>
-            <li><img src="imagenes/002-fire base.png" alt="Fire Base">Fire base</li>
-            <li><img src="imagenes/003-git.png" alt="Git">Git</li>
-            <li><img src="imagenes/004-photo shop.png" alt="Photo Shop">Photoshop</li>
-            <li><img src="imagenes/005-figma.png" alt="Figma">Figma</li>
-            <li><img src="imagenes/006-mongo.png" alt="Mongo">Mongo</li>
-            <li><img src="imagenes/007-my sql.png" alt="My sql">My sql</li>
-            <li><img src="imagenes/008-php.png" alt="PHP">PHP</li>
-            <li><img src="imagenes/009-tailwind.png" alt="Tailwind">Tailwind</li>
-            <li><img src="imagenes/010-type script.png" alt="Type Script">Type Script</li>
-            <li><img src="imagenes/011-html.png" alt="html">HTML</li>
-            <li><img src="imagenes/012-react.png" alt="React">React</li>
-            <li><img src="imagenes/013-node.png" alt="Node">Node</li>
-            <li><img src="imagenes/014-java script.png" alt="Java Script">Java Script</li>
-            <li><img src="imagenes/015-css.png" alt="CSS">CSS</li>
+   
+    <section id="section-con">
+        <h2 id="title-con">Conocimientos</h2>
+        <ul id="list-con">
+            <li class="item-con"><img src="imagenes/001-unity.png" alt="Unity"><p>Unity</p></li>
+            <li class="item-con"><img src="imagenes/002-fire base.png" alt="Fire Base"><p>Fire base</p></li>
+            <li class="item-con"><img src="imagenes/003-git.png" alt="Git"><p>Git</p></li>
+            <li class="item-con"><img src="imagenes/004-photo shop.png" alt="Photo Shop"><p>Photoshop</p></li>
+            <li class="item-con"><img src="imagenes/005-figma.png" alt="Figma"><p>Figma</p></li>
+            <li class="item-con"><img src="imagenes/006-mongo.png" alt="Mongo"><p>Mongo</p></li>
+            <li class="item-con"><img src="imagenes/007-my sql.png" alt="My sql"><p>My sql</p></li>
+            <li class="item-con"><img src="imagenes/008-php.png" alt="PHP"><p>PHP</p></li>
+            <li class="item-con"><img src="imagenes/009-tailwind.png" alt="Tailwind"><p>Tailwind</p></li>
+            <li class="item-con"><img src="imagenes/010-type script.png" alt="Type Script"><p>Type Script</p></li>
+            <li class="item-con"><img src="imagenes/011-html.png" alt="html"><p>HTML</p></li>
+            <li class="item-con"><img src="imagenes/012-react.png" alt="React"><p>React</p></li>
+            <li class="item-con"><img src="imagenes/013-node.png" alt="Node"><p>Node</p></li>
+            <li class="item-con"><img src="imagenes/014-java script.png" alt="Java Script"><p>Java Script</p></li>
+            <li class="item-con"><img src="imagenes/015-css.png" alt="CSS"><p>CSS</p></li>
         </ul>
     </section>
     <section>
         <h2>Proyectos</h2>
         <div>
             <h4>GamesDev</h4>
-            <p>Noviembre 2024</p>
+            <p>Noviembre 2024</p></p>
             <i>Aprende Frontend Jugando</i>
             <p>Como alumno la idea es terminar los niveles de todos los juegos dentro de la web. Haciendo las pausas necesarias en cuanto vayamos viendo el contenido durante el curso.</p>
         </div>
