--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <p>Noviembre 2024</p>
             </div>
             <i class="subt-pro">Creacion de mi porfolio personal</i>
-            <p class="text-pro">Al finalizar el curso y con los conocimientos adquiridos durante curso me propuse como proyecto crear mi porfolio. Generando la mejor etructura posible usando Html, marcando un estilo atravez de CSS y agregando funcionalidades por medio de Java Script.</p>
+            <p class="text-pro">Al finalizar el curso y con los conocimientos adquiridos durante curso me propuse como proyecto crear mi porfolio. Generando la mejor estructura posible usando Html, marcando un estilo atravez de CSS y agregando funcionalidades por medio de Java Script.</p>
         </section>
     </article>
     <footer>©2024- Ivan Balmer</footer>
