--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="banner">
                     <a  target="_blank" href="https://camalote.empretienda.com.ar/"><img  src="imagenes/100-camalote tienda.png" alt="Camalote tienda"></a>
                 </div>
-                <h4>Camalote</h4>
+                <h4>Camalote Cuadernos</h4>
                 <p>En base a la tienda del emprendimiento genere una estructura HTML para 
                    crear una tienda de productos, donde podemos encontrar diferentes secciones 
                    como: opciones de cuenta, carrito de compras, logotipo, productos,
