--- a/001-tienda.html
+++ b/001-tienda.html
@@ -61,32 +61,32 @@
         <h1>TODOS LOS PRODUCTOS</h1>
         <ul id="grid-products">
             <li class="item-product">
-                <a href=""><img width="30px" src="imagenes/030-package.png" alt="Producto"></a>
+                <a href=""><img  src="imagenes/030-package.png" alt="Producto"></a>
                 <a href="">Descripcion del producto</a>    
                 <p>$00,00</p>
             </li>
             <li class="item-product">
-                <a href=""><img width="30px" src="imagenes/030-package.png" alt="Producto"></a>
+                <a href=""><img  src="imagenes/030-package.png" alt="Producto"></a>
                 <a href="">Descripcion del producto</a>    
                 <p>$00,00</p>
             </li>
             <li class="item-product">
-                <a href=""><img width="30px" src="imagenes/030-package.png" alt="Producto"></a>
+                <a href=""><img  src="imagenes/030-package.png" alt="Producto"></a>
                 <a href="">Descripcion del producto</a>    
                 <p>$00,00</p>
             </li>
             <li class="item-product">
-                <a href=""><img width="30px" src="imagenes/030-package.png" alt="Producto"></a>
+                <a href=""><img  src="imagenes/030-package.png" alt="Producto"></a>
                 <a href="">Descripcion del producto</a>    
                 <p>$00,00</p>
             </li>
             <li class="item-product">
-                <a href=""><img width="30px" src="imagenes/030-package.png" alt="Producto"></a>
+                <a href=""><img  src="imagenes/030-package.png" alt="Producto"></a>
                 <a href="">Descripcion del producto</a>    
                 <p>$00,00</p>
             </li>
             <li class="item-product">
-                <a href=""><img width="30px" src="imagenes/030-package.png" alt="Producto"></a>
+                <a href=""><img  src="imagenes/030-package.png" alt="Producto"></a>
                 <a href="">Descripcion del producto</a>    
                 <p>$00,00</p>
             </li>
