detalles(listo todo por ahora)
ultimos retoques de CSS y correcciones en HTML.

--- a/001-tienda.html
+++ b/001-tienda.html
@@ -90,6 +90,21 @@
                 <a href="">Descripcion del producto</a>    
                 <p>$00,00</p>
             </li>
+            <li class="item-product">
+                <a href=""><img  src="imagenes/030-package.png" alt="Producto"></a>
+                <a href="">Descripcion del producto</a>    
+                <p>$00,00</p>
+            </li>
+            <li class="item-product">
+                <a href=""><img  src="imagenes/030-package.png" alt="Producto"></a>
+                <a href="">Descripcion del producto</a>    
+                <p>$00,00</p>
+            </li>
+            <li class="item-product">
+                <a href=""><img  src="imagenes/030-package.png" alt="Producto"></a>
+                <a href="">Descripcion del producto</a>    
+                <p>$00,00</p>
+            </li>
         </ul>
     </aside>
     <footer id="footer">
