--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
     <article id="article-con">
         <h2 id="title-con">Conocimientos</h2>
         <section id="grid-con">           
-            <div class="item-con"><img src="imagenes/001-unity.png" alt="Unity"><p>Unity</p></li></div>
-            <div class="item-con"><img src="imagenes/002-fire base.png" alt="Fire Base"><p>Fire base</p></li></div>
-            <div class="item-con"><img src="imagenes/003-git.png" alt="Git"><p>Git</p></li></div>           
-            <div class="item-con"><img src="imagenes/004-photo shop.png" alt="Photo Shop"><p>Photoshop</p></li></div>
-            <div class="item-con"><img src="imagenes/005-figma.png" alt="Figma"><p>Figma</p></li></div>
-            <div class="item-con"><img src="imagenes/006-mongo.png" alt="Mongo"><p>Mongo</p></li></div>        
-            <div class="item-con"><img src="imagenes/007-my sql.png" alt="My sql"><p>My sql</p></li></div>
-            <div class="item-con"><img src="imagenes/008-php.png" alt="PHP"><p>PHP</p></li></div>
-            <div class="item-con"><img src="imagenes/009-tailwind.png" alt="Tailwind"><p>Tailwind</p></li></div>    
-            <div class="item-con"><img src="imagenes/010-type script.png" alt="Type Script"><p>TypeScript</p></li></div>
-            <div class="item-con"><img src="imagenes/011-html.png" alt="html"><p>HTML</p></li></div>
-            <div class="item-con"><img src="imagenes/012-react.png" alt="React"><p>React</p></li></div>
-            <div class="item-con"><img src="imagenes/013-node.png" alt="Node"><p>Node</p></li></div>
-            <div class="item-con"><img src="imagenes/014-java script.png" alt="Java Script"><p>JavaScript</p></li></div>
-            <div class="item-con"><img src="imagenes/015-css.png" alt="CSS"><p>CSS</p></li></div> 
+            <div class="item-con"><img src="imagenes/001-unity.png" alt="Unity"><p>Unity</p></div>
+            <div class="item-con"><img src="imagenes/002-fire base.png" alt="Fire Base"><p>Fire base</p></div>
+            <div class="item-con"><img src="imagenes/003-git.png" alt="Git"><p>Git</p></div>           
+            <div class="item-con"><img src="imagenes/004-photo shop.png" alt="Photo Shop"><p>Photoshop</p></div>
+            <div class="item-con"><img src="imagenes/005-figma.png" alt="Figma"><p>Figma</p></div>
+            <div class="item-con"><img src="imagenes/006-mongo.png" alt="Mongo"><p>Mongo</p></div>        
+            <div class="item-con"><img src="imagenes/007-my sql.png" alt="My sql"><p>My sql</p></div>
+            <div class="item-con"><img src="imagenes/008-php.png" alt="PHP"><p>PHP</p></div>
+            <div class="item-con"><img src="imagenes/009-tailwind.png" alt="Tailwind"><p>Tailwind</p></div>    
+            <div class="item-con"><img src="imagenes/010-type script.png" alt="Type Script"><p>TypeScript</p></div>
+            <div class="item-con"><img src="imagenes/011-html.png" alt="html"><p>HTML</p></div>
+            <div class="item-con"><img src="imagenes/012-react.png" alt="React"><p>React</p></div>
+            <div class="item-con"><img src="imagenes/013-node.png" alt="Node"><p>Node</p></div>
+            <div class="item-con"><img src="imagenes/014-java script.png" alt="Java Script"><p>JavaScript</p></div>
+            <div class="item-con"><img src="imagenes/015-css.png" alt="CSS"><p>CSS</p></div> 
         </section>
     </article>
     <article id="article-pro">
